# voice-Input

./: .actrc  .gitignore  .release-notes-v0.1.1.md  .release-notes-v0.2.0.md  .release-notes-v0.3.0.md  .release-notes-v0.3.1.md  .release-notes-v0.3.2.md  .release-notes-v0.3.3.md  AI_OPTIMIZATION_REVIEW.md  ANALYSIS_COMPLETE.md  BUGFIX-cloud-ai-processing.md  BUILD.md  CLAUDE.md  CODE_LOCATIONS_INDEX.md  DOCUMENTATION_INDEX.md  LICENSE  MIGRATION_EXECUTIVE_SUMMARY.md  PACKAGING_SUMMARY.md  PYQT6_QUICK_REFERENCE.md  PYQT_TO_PYSIDE6_MIGRATION_PLAN.md  PyQt6_Code_Location_Index.md  PyQt6_INVESTIGATION_COMPLETE.md  PyQt6_Summary.txt  PyQt6_Usage_Report.md  README.md  README_EN.md  README_PyQt6_REPORTS.txt  RELEASE_NOTES.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.4.1.md  RELEASE_NOTES_v0.4.3.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.5.1.md  RELEASE_NOTES_v0.5.2.md  RELEASE_NOTES_v0.5.3.md  RELEASE_NOTES_v0.5.6.md  RELEASE_NOTES_v0.5.7.md  RELEASE_NOTES_v0.5.8.md  UI_COMPONENTS_MIGRATION_ANALYSIS.md  app.py  (+13 more)
.github/workflows/: build.yml  ci.yml
assets/fonts/resource-han-rounded/: FONT-NOTICE.txt
assets/i18n/: sonicinput_en_US.ts  sonicinput_zh_CN.qm  sonicinput_zh_CN.ts
config/: services.json
docs/: CI_CD_TEST_SUMMARY.md  SHERPA_ONNX_LIGHTWEIGHT_ANALYSIS.md  SHERPA_ONNX_QUICK_COMPARISON.md
openspec/: project.md
openspec/changes/refactor-unified-lifecycle-architecture/: dependency-graph.md  design.md  phase-2.7-summary.md  proposal.md  service-classification.md  tasks.md
plugins/: __init__.py  example_plugin.py  whisper_openai_plugin.py
scripts/: act-setup.ps1  act-setup.sh  validate_build.py
src/sonicinput/: __init__.py
src/sonicinput/ai/: __init__.py  base_client.py  factory.py  groq.py  http_client_manager.py  nvidia.py  openai_compatible.py  openrouter.py  performance_monitor.py
src/sonicinput/audio/: __init__.py  processor.py  recorder.py  visualizer.py
src/sonicinput/core/: __init__.py  configurable_container_factory.py  di_container.py  di_container_enhanced.py  di_container_original.py  hotkey_config_helper.py  hotkey_manager.py  hotkey_manager_pynput.py  hotkey_manager_win32.py  (+2 more)
tests/: README.md  README_recording_tests.md  conftest.py  test_basic_functionality.py  test_basic_simple.py  test_bug_regression.py  test_cloud_providers_integration.py  test_cloud_transcription_services.py  test_config_reload.py  test_end_to_end_workflow.py  test_event_listener_regression.py  test_real_recording_functionality.py  test_recording_basic.py  test_recording_overlay.py  test_recording_simple.py  test_refactored_api_compatibility.py  test_streaming_transcription.py
tests/ci/: README.md  conftest.py  pytest.ini  run_ci_tests.py
tests/core/: test_application_orchestrator_shutdown.py  test_audio_recorder_streaming_remaining.py  test_config_service_speech_fallback.py  test_config_writer_atomic.py  test_hot_reload.py  test_lifecycle.py  test_null_speech_service.py  test_orchestrator_model_loading.py
tests/mocks/: __init__.py  ai_mock.py  audio_mock.py  input_mock.py  whisper_mock.py
tests/ui/: __init__.py  conftest.py  test_api_connections.py  test_history_tab.py  test_localization_service.py  test_recording_overlay.py  test_settings_window.py
(+196 files in other folders)
