[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonicinput"
version = "0.1.0"
description = "High-speed voice input tool powered by Whisper AI"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "ctranslate2>=4.5.0,<5.0.0",  # Upgraded to 4.5.x+ (cuDNN 9) for CUDA 12+ support
    "nvidia-cudnn-cu12>=9.0.0,<10.0.0",  # cuDNN 9 for CUDA 12 (required by ctranslate2 4.5+)
    "nvidia-cublas-cu12>=12.0.0",  # cuBLAS for CUDA 12 (required by ctranslate2)
    "PyAudio>=0.2.11",
    "PySide6>=6.6.0",
    "requests>=2.31.0",
    "pywin32>=306",
    "pyperclip>=1.8.4",
    "pynput>=1.7.6",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "psutil>=5.9.0",
    "qt-material>=2.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",      # Mock 工具
    "pytest-asyncio>=0.21.0",   # 异步测试
    "pytest-timeout>=2.2.0",    # 超时控制
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0"
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "vulture>=2.14",
    "bandit>=1.8.6",
]

[project.scripts]
sonicinput = "sonicinput.main:main"
