[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sonicinput"
version = "0.4.3"
description = "High-speed voice input tool powered by Whisper AI"
requires-python = ">=3.10"

# 核心依赖 - 所有模式都需要
dependencies = [
    # Windows GUI 依赖（使用平台标记，只在 Windows 上安装）
    "PyAudio>=0.2.11; sys_platform == 'win32'",
    "PySide6>=6.6.0; sys_platform == 'win32'",
    "pywin32>=306; sys_platform == 'win32'",
    "pyperclip>=1.8.4; sys_platform == 'win32'",
    "pynput>=1.7.6; sys_platform == 'win32'",
    "sounddevice>=0.4.6; sys_platform == 'win32'",
    "qt-material>=2.17; sys_platform == 'win32'",
    # 通用依赖（跨平台）
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "psutil>=5.9.0",
    "cryptography>=46.0.3",
    # 云转录支持
    "groq>=0.9.0",
]

[project.optional-dependencies]
# Windows GUI依赖（已包含在核心依赖中，保留此extras为向后兼容）
windows = []

# 本地转录支持（轻量级 sherpa-onnx）
local = [
    "sherpa-onnx>=1.10.0",
]

# 开发工具
dev = [
    "pytest>=7.4.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.4.0",
    "pytest-html>=4.1.0",
    "pytest-qt>=4.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "vulture>=2.14",
    "bandit>=1.8.6",
]

# 完整安装（Windows+本地+开发）
full = [
    "sonicinput[windows,local,dev]"
]

# CI测试依赖（跨平台）
ci = [
    "sonicinput[dev]"
]

[project.scripts]
sonicinput = "sonicinput.main:main"

[tool.pytest.ini_options]
qt_api = "pyside6"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU/CUDA support",
    "gui: marks tests that require GUI/Qt environment (use '-m \"not gui\"' to skip)",
    "e2e: marks end-to-end workflow tests",
]
addopts = "-v"

[dependency-groups]
dev = [
    "nuitka>=2.8.4",
]
